[gd_scene load_steps=2 format=2]

[ext_resource path="res://Lobby/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.0
margin_top = -56.0
margin_right = 127.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 234.0
margin_bottom = 92.0

[node name="PlayerCountLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 234.0
margin_bottom = 14.0
text = "1/2 Players"
align = 1

[node name="PlayerList" type="ItemList" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 234.0
margin_bottom = 27.0
max_text_lines = 2
auto_height = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 58.0
margin_top = 133.0
margin_right = 202.0
margin_bottom = 188.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameButton" type="Button" parent="Panel/VBoxContainer"]
visible = false
margin_right = 144.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 3
text = "Start Game"

[node name="DisconnectButton" type="Button" parent="Panel/VBoxContainer"]
margin_right = 144.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
text = "Disconnect"
[connection signal="pressed" from="Panel/VBoxContainer/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/DisconnectButton" to="." method="_on_DisconnectButton_pressed"]
